--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Realpython world map {% block title%} {% endblock %}</title>
+    <title>Real Python Members Map {% block title%} {% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Realpython world map</h1>
+    <h1>Real Python Members Map</h1>
     <table>
         <tr>
             <td>
